--- a/Date Bomb/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Date Bomb/en.lproj/MainStoryboard_iPhone.storyboard
@@ -129,15 +129,60 @@
                         <outlet property="myRatingLabel" destination="Kdc-5m-lhi" id="csJ-uC-20W"/>
                         <outlet property="theirRatingLabel" destination="dXf-nq-z3D" id="laK-LK-2vo"/>
                         <outlet property="titleLabel" destination="zHl-6h-eiv" id="qNJ-KJ-ufC"/>
+                        <segue destination="qSH-uo-NXO" kind="modal" identifier="bombed" modalTransitionStyle="flipHorizontal" id="OSP-Hk-oFf"/>
                     </connections>
                 </viewController>
             </objects>
             <point key="canvasLocation" x="436" y="-35"/>
         </scene>
+        <!--Bail Out View Controller-->
+        <scene sceneID="S0r-Ne-ejV">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9aZ-6Y-0Hs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="qSH-uo-NXO" customClass="BailOutViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8Wv-DC-I9q">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="back@2x.jpg" id="Ybs-7M-Ucj">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bomb@2x.png" id="fYf-UO-SDx">
+                                <rect key="frame" x="60" y="104" width="200" height="200"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="UR4-Oo-yJB">
+                                <rect key="frame" x="67" y="367" width="200" height="45"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" size="button"/>
+                                <state key="normal" title="GET BAILED OUT" backgroundImage="redbutton@2x.png">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="bailOut" destination="qSH-uo-NXO" eventType="touchUpInside" id="bAj-mg-a6H"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="bailOutButton" destination="UR4-Oo-yJB" id="vJy-U6-bs2"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="841" y="-35"/>
+        </scene>
     </scenes>
     <resources>
         <image name="back@2x.jpg" width="640" height="960"/>
+        <image name="bomb@2x.png" width="400" height="400"/>
         <image name="down@2x.png" width="256" height="256"/>
+        <image name="redbutton@2x.png" width="400" height="90"/>
         <image name="up@2x.png" width="256" height="256"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
