--- a/Date Bomb/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Date Bomb/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,10 +1,44 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2177" systemVersion="11D50b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2177" systemVersion="11D50b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="Lvu-y7-hP4">
     <dependencies>
         <development defaultVersion="4200" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1173"/>
     </dependencies>
     <scenes>
+        <!--Intro View Controller-->
+        <scene sceneID="cS3-aV-1CW">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M4f-jI-Wsi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="Lvu-y7-hP4" customClass="IntroViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XNY-aH-M9I">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" image="back@2x.jpg" id="uiB-l4-2xC">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="heart@2x.png" id="ldd-gJ-cXA">
+                                <rect key="frame" x="96" y="166" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Date Bomb" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="LCk-rF-bn8">
+                                <rect key="frame" x="0.0" y="49" width="320" height="62"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="2" kind="modal" identifier="startUp" modalTransitionStyle="flipHorizontal" id="ZQL-AF-Erv"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="-365" y="-35"/>
+        </scene>
         <!--Login View Controller-->
         <scene sceneID="5">
             <objects>
@@ -182,9 +216,37 @@
         <image name="back@2x.jpg" width="640" height="960"/>
         <image name="bomb@2x.png" width="400" height="400"/>
         <image name="down@2x.png" width="256" height="256"/>
+        <image name="heart@2x.png" width="256" height="256"/>
         <image name="redbutton@2x.png" width="400" height="90"/>
         <image name="up@2x.png" width="256" height="256"/>
     </resources>
+    <classes>
+        <class className="BailOutViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BailOutViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="bailOutButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="IntroViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/IntroViewController.h"/>
+        </class>
+        <class className="LoginViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="loadingIndicator" candidateClass="UIActivityIndicatorView"/>
+                <relationship kind="outlet" name="loadingMessage" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="name" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="MeterViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MeterViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="myRatingLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="theirRatingLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
